<resources>
    <string name="app_name">Instagram</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="stories">stories</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="post">posts</string>
    <string name="post_image">Post Image</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="add_comment">Add Comment...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
