<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignInActivity">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/insta_logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signIn_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_border_gray"
        android:gravity="start|center"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signIn_password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_border_gray"
        android:gravity="start|center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/signIn_email_editText"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/signIn_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_solid_insta"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signIn_password_editText" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="@id/or_textView"
        app:layout_constraintEnd_toStartOf="@id/or_textView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/or_textView">

    </View>

    <TextView
        android:id="@+id/or_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textColor="@color/colorGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/signIn_sign_in_button" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="@id/or_textView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@id/or_textView"
        app:layout_constraintTop_toTopOf="@id/or_textView">

    </View>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/or_textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sign_in_signUp_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>