<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="4dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="4dp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_details_user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/placerholder"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post_details_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/post_details_user_image"
            app:layout_constraintTop_toTopOf="@+id/post_details_user_image" />

        <TextView
            android:id="@+id/post_details_post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorTitle"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/post_details_user_image"
            app:layout_constraintTop_toBottomOf="@+id/post_details_user_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/post_details_image_container"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:elevation="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/post_details_user_image">

            <ImageView
                android:id="@+id/post_details_post_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/post_image"
                android:scaleType="centerCrop"
                android:src="@drawable/post_placeholder" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/post_details__like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/like"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/post_details_image_container" />

        <ImageView
            android:id="@+id/post_details_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            android:src="@drawable/comment_icon"
            app:layout_constraintStart_toEndOf="@id/post_details__like"
            app:layout_constraintTop_toBottomOf="@+id/post_details_image_container" />

        <ImageView
            android:id="@+id/post_details_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/menu_icon"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/post_details_image_container" />

        <ImageView
            android:id="@+id/post_details_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/share_icon"
            app:layout_constraintEnd_toStartOf="@id/post_details_remove"
            app:layout_constraintTop_toBottomOf="@+id/post_details_image_container" />

        <TextView
            android:id="@+id/post_details_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="8dp"
            android:text="Liked by 31 user"
            android:textColor="@color/colorTitle"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/post_details__like" />

        <LinearLayout
            android:id="@+id/comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/post_details_like_count">

            <EditText
                android:id="@+id/post_details_add_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/back_border_white"
                android:textColor="@color/colorTitle"
                android:hint="@string/add_comment"
                android:padding="8dp"
                android:textSize="12sp" />



            <ImageView
                android:id="@+id/add_comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/send_icon"
                android:layout_marginEnd="8dp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/comment_layout"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>