<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ProfileFragment"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/placerholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/add_photo_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_profile_picture_icon"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="@+id/img_profile"
            app:layout_constraintBottom_toBottomOf="@id/img_profile"/>

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Mohamed Sobhy"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile"
            />

        <TextView
            android:id="@+id/mail_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="\@MohamedSobhy"
            android:gravity="center"
            android:textColor="@color/colorTitle"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_textView"
            />

        <TextView
            android:id="@+id/bio_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text"
            android:textColor="@color/colorTitle"
            android:gravity="center"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail_textView"
            />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/log_out"
            android:background="@drawable/back_solid_white"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio_textView" />

        <LinearLayout
            android:id="@+id/numbers_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout_button">

            <TextView
                android:id="@+id/posts_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="193"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/followers_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="587"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/following_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="426"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/status_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="4dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numbers_layout">

            <TextView
                android:id="@+id/posts_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/posts"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/followers_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/followers"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/following_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/following"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/photo_layout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_layout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo1"
                android:padding="3dp"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo2"
                android:padding="3dp"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo3"
                android:padding="3dp"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photo_layout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_layout1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo4"
                android:padding="3dp"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo5"
                android:padding="3dp"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo4"
                android:padding="3dp"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photo_layout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_layout2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo1"
                android:padding="3dp"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo2"
                android:padding="3dp"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/logo3"
                android:padding="3dp"
                android:scaleType="fitXY"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>